<resources>
    <string name="app_name">Wanandroid</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">首页</string>
    <string name="system">体系</string>
    <string name="navigation">导航</string>
    <string name="project_type">项目分类</string>
    <string name="project">项目</string>
    <string name="tool">工具</string>

    <string name="brvah_loading">正在加载中...</string>
    <string name="brvah_load_failed">加载失败，请点我重试</string>
    <string name="brvah_load_end">没有更多数据</string>
    <string name="is_loading">正在加载...</string>
    <string name="search">搜索</string>
    <string name="try_another_key">换个关键词试试！</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="please_input_username">请输入用户名</string>
    <string name="please_input_psw">请输入密码</string>
    <string name="is_logining">正在登录</string>
    <string name="or">Or</string>
    <string name="register">注册</string>
    <string name="is_registering">正在注册</string>
    <string name="my_collect">我的收藏</string>
    <string name="collect">收藏</string>
    <string name="about">关于</string>
    <string name="open_issue">提 issue</string>
    <string name="send_email">发邮件</string>
    <string name="sendto">mailto:sunluyao1993x@gmail.com</string>
    <string name="mail_topic">Wanandroid 反馈</string>
    <string name="source_url">源代码地址</string>
    <string name="feedback">意见反馈</string>
    <string name="third_lib">第三方库</string>
    <string name="developer">开发者</string>
    <string name="lasted_project">最新项目</string>
    <string name="blog">公众号</string>
    <string name="search_article">\u00A0\u00A0搜索文章</string>
    <string name="net_error">网络异常 !</string>
    <string name="please_input_title">请输入标题</string>
    <string name="please_input_url">请输入链接</string>
    <string name="share">分享</string>
    <string name="share_article">分享文章</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="me">我</string>
    <string name="confirm">确定</string>

    <string name="executing_nth_iteration">%1$d / %2$d</string>
    <string name="open_license">开源协议</string>
    <string name="common_search">大家都在搜</string>
    <string name="common_website">常用网站</string>

</resources>
