<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="luyao.wanandroid.ui.main.NewMainActivity"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_blog"
        android:name="luyao.wanandroid.ui.project.BlogFragment"
        android:label="@string/blog"
        tools:layout="@layout/activity_project" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="luyao.wanandroid.ui.search.SearchActivity"
        android:label="@string/search"
        tools:layout="@layout/activity_project" />

    <fragment
        android:id="@+id/navigation_project"
        android:name="luyao.wanandroid.ui.project.ProjectFragment"
        android:label="@string/project_type"
        tools:layout="@layout/fragment_notifications" />
</navigation>