<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/about_root"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <include layout="@layout/title_layout"/>

    <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:src="@mipmap/ic_launcher"/>

    <TextView
            android:id="@+id/versionName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_gray"
            android:textSize="14sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            tools:text="V 1.0.0"/>


    <TextView
            android:id="@+id/license"
            style="@style/About_Tv"
            android:text="@string/license"
            android:layout_marginTop="20dp"/>

    <View style="@style/Line"/>

    <TextView
            android:id="@+id/source"
            android:text="@string/source_url"
            style="@style/About_Tv"/>

    <View style="@style/Line"/>

    <TextView
            android:id="@+id/feedback"
            android:text="@string/feedback"
            style="@style/About_Tv"/>

    <View style="@style/Line"/>

    <TextView
            android:id="@+id/thirdLib"
            android:text="@string/third_lib"
            style="@style/About_Tv"/>

    <View style="@style/Line"/>

    <TextView
            android:id="@+id/developer"
            android:text="@string/developer"
            style="@style/About_Tv"/>

    <View style="@style/Line"/>

</LinearLayout>