<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:binding="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="luyao.wanandroid.ui.share.ShareViewModel" />
    </data>


    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/dialog_background"
            android:clickable="true"
            android:elevation="6dp"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingTop="24dp"
            android:paddingRight="24dp"
            android:paddingBottom="16dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/dialog_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="20dp"
                android:text="@string/share_article"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:visibleUnless="@{viewModel.uiState.showProgress}" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_float_label"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                app:goneUnless="@{viewModel.uiState.showProgress}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/please_input_title"
                    android:inputType="textEmailAddress"
                    android:selectAllOnFocus="true"
                    android:textColorHighlight="#b303a9f4"
                    android:text="@={viewModel.title}"
                    binding:afterTextChanged="@{viewModel.verifyInput}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_float_label"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="16dp"
                app:goneUnless="@{viewModel.uiState.showProgress}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/please_input_url"
                    android:inputType="textEmailAddress"
                    android:selectAllOnFocus="true"
                    android:textColorHighlight="#b303a9f4"
                    android:text="@={viewModel.url}"
                    binding:afterTextChanged="@{viewModel.verifyInput}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <FrameLayout
                android:id="@+id/actions_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:goneUnless="@{viewModel.uiState.showProgress}">

                <Button
                    android:id="@+id/shareBt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:enabled="@{viewModel.uiState.enableShareButton}"
                    android:text="@string/confirm"
                    android:onClick="@{() -> viewModel.shareArticle()}"/>

            </FrameLayout>

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="64dp"
                android:indeterminate="true"
                android:indeterminateTint="#ffe0e0e0"
                android:indeterminateTintMode="src_in"
                app:visibleUnless="@{viewModel.uiState.showProgress}" />

        </LinearLayout>

    </FrameLayout>

</layout>